Refactoring some of the unique/dup selectors code to be a bit more readable, adding tests to help isolate a bug that I'm chasing.

--- a/test/assets/stylesheets/globals.css
+++ b/test/assets/stylesheets/globals.css
@@ -8,6 +8,10 @@
   font-size: 1.4em;
 }
 
+#call_to_action {
+  background-color: #eee;
+}
+
 ul li:first-child {
   color: #9cc;
   font-weight: bold;
@@ -21,6 +25,6 @@ ul li:first-child {
   color: #f00;
 }
 
-#call_to_action {
-  background-color: #eee;
+.arbitrary_class {
+  color: #fff;
 }
